core/src/border/border.module.scss
@import "../theme/module.scss";

.border {
	border-top-style: solid;
	border-top-width: 1px;
	border-left-style: solid;
	border-left-width: 1px;
}

.weak {
	@include light {
		border-color: var(--light-gray-2);
	}
	@include dark {
		border-color: var(--dark-gray-2);
	}
}

.strong {
	@include light {
		border-color: var(--light-gray-3);
	}
	@include dark {
		border-color: var(--dark-gray-3);
	}
}

